--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ header h1 {
 	margin: 0;
 	padding: 38px 0;
 	width: 100%;
-	border-bottom: #45610E 3px solid;
+	border-bottom: #77A466 3px solid;
 }
 
 header h1 span {
@@ -72,7 +72,7 @@ header h1 span {
 
 header nav {
 	/*float: right;*/
-	padding: 46px 0;
+	padding: 30px 0;
 }
 
 header nav ul {
