--- a/css/main.css
+++ b/css/main.css
@@ -175,3 +175,83 @@ footer span {
 	color: #45610E;
 	font-size: 0.875em;
 }
+
+/** Breakpoints for tablets and desktop **/
+@media all and (min-width: 768px) {
+    /* Tablet styles here */
+	.bottom-section .content-wrapper {
+		justify-content: space-evenly;
+	}
+
+	.section-one {
+		width: 30%;
+	}
+	
+	.section-two {
+		width: 30%;
+		border-left: 5px solid #EEE;
+		border-right: 5px solid #EEE;
+		border-top: 0;
+		border-bottom: 0;
+		padding: 0 30px;
+
+	}
+	
+	.section-three {
+		width: 30%;
+	}
+}
+ 
+@media all and (min-width: 1200px) {
+    /* Desktop styles here */
+	body {
+		font-size: 1em;
+	}
+
+	header {
+		justify-content: center;
+		align-items: center;
+		padding: 0 30px;
+	}
+	
+	header h1 {
+		width: 79%;
+  		padding: 30px 0;
+  		border-bottom: 0;
+  		text-align: left;
+	}
+	
+	header nav {
+		width: 21%;
+		text-align: right;
+	}
+	
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.bottom-section .content-wrapper {
+		justify-content: space-evenly;
+	}
+
+	.section-one {
+		width: 30%;
+		padding: 0 30px;
+	}
+	
+	.section-two {
+		width: 40%;
+		border-left: 5px solid #EEE;
+		border-right: 5px solid #EEE;
+		padding: 0 30px;
+	}
+	
+	.section-three {
+		width: 30%;
+	}
+
+	.section-one, .section-two, .section-three {
+		padding: 0 30px;
+	}
+}
